# poetry-plugin-commands

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: test.sh
src/poetry_plugin_commands/: __init__.py  command.py  plugins.py
