[tool.poetry]
name = "poetry-plugin-commands"
version = "0.0.1"
description = "Poetry plugin for simple custom user commands execution."
authors = ["BlackCatDevel0per <bcdev@mail.ru>"]
license = "Apache 2.0"

packages = [
    { include = "poetry_plugin_commands", from = "src" }
]

[tool.poetry.urls]
Homepage = "https://github.com/BlackCatDevel0per/poetry-plugin-commands"
Documentation = "https://github.com/BlackCatDevel0per/poetry-plugin-commands"  # TODO: ...
Repository = "https://github.com/BlackCatDevel0per/poetry-plugin-commands"

[tool.poetry.plugins.commands]
stree = "tree src"
test_var = "echo $VAR"
run_app = "PYTHONPATH=src:. poetry run python src/app_launch/main.py"

[tool.ruff]
line-length = 100
select = [
	"RUF",
	"FBT",
	"FURB",
	"PERF",
	"TRY",
	"FLY",
	"YTT",
	"PIE",
	# "PYI",  # For stub files
	"TCH",
	"FA",
	"UP",
	"EM",
	"PL",
	"G",  # NOTE: CONF!
	"INP",
	"PT",
	"DJ",
	"NPY",
	"PD",
	"ERA",
	"ARG",
	"INT",
	"TID",
	"SIM",
	"SLOT",
	"RET",
	"RSE",
	"SLF",
	"T20",
	"Q",
	"ISC",
	"BLE",
	"DTZ",
	"COM",
	"C4",
	"A",
	"PTH",
	"FIX",
	"TD",
	"ANN",
	"S",
	"ASYNC",
	"D",
	"N",

	"C",
	"I",
	# Pycodestyle
	"E",
	# Pyflakes
	"F",
	"B",
	"W",
	# isort
	# "I001"
]

ignore = [
	"W191", "D206", "RET502",
	"UP040",  # New type aliases (type hinting)
	"PTH123",  # Not good solution for all things..
	"TD001",
	"TD002",
	"TD003",
	"S101",
]  # Add RET503?

src = ["src/poetry_plugin_commands", "tests", "scripts"]

exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "tests",
    "dev",
    "*.egg-info",
]
target-version = "py310"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
indent-style = "tab"


[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.8.0"
poetry-core = "^1.7.0"

[tool.poetry.group.fancy]
optional = false

[tool.poetry.group.fancy.dependencies]
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-dependency = "^0.5.1"
ruff = "^0.0.292"
build = "^1.0.3"
setuptools = "^69.0.3"
wheel = "^0.42.0"
faker = "^22.6.0"
ipython = "8.12.3"

[tool.poetry.group.other.dependencies]
rich = "^13.7.0"


[tool.poetry.plugins."poetry.application.plugin"]
user_commands = "poetry_plugin_commands.plugins:UserCommandsApplicationPlugin"

[build-system]
build-backend = "poetry.core.masonry.api"

